Fixed zmod negation bug, added version of berlekamp massey that can accept rational numbers

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,8 @@ enable_testing()
 
 set(targets
     basic
-    crt)
+    crt
+    find_recurrence)
 
 foreach(target ${targets})
     message("Adding target: ${target}")
