Trying to be compatible with msvc but int128 modulus still can't link :/

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,11 +9,12 @@ include_directories(../include SYSTEM C:/Tools/primecount/include)
 if(CMAKE_CXX_PLATFORM_ID STREQUAL "Windows")
     message("Adding Windows-specific headers")
     include_directories(SYSTEM C:/Tools/boost_1_84_0 C:/Tools/gmp/include)
+    link_directories(SYSTEM C:/Tools/primecount-msvc/lib)
 else()
-    link_libraries(stdc++exp TBB::tbb)
+    link_directories(SYSTEM C:/Tools/primecount/lib)
+    link_libraries(stdc++exp TBB::tbb gmp)
 endif()
-link_directories(SYSTEM C:/Tools/primecount/lib)
-link_libraries(primecount primesieve gmp)
+link_libraries(primecount primesieve)
 
 include(CTest)
 enable_testing()
