euler namespace is no longer inline

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,13 +5,13 @@ find_package(TBB)
 set(CMAKE_CXX_STANDARD 26)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 
-include_directories(../include SYSTEM C:/Tools/primecount/include)
+include_directories(../include SYSTEM C:/Tools/include)
 if(CMAKE_CXX_PLATFORM_ID STREQUAL "Windows")
     message("Adding Windows-specific headers")
     include_directories(SYSTEM C:/Tools/boost_1_84_0 C:/Tools/gmp/include)
     link_directories(SYSTEM C:/Tools/primecount-msvc/lib)
 else()
-    link_directories(SYSTEM C:/Tools/primecount/lib)
+    link_directories(SYSTEM C:/Tools/lib)
     link_libraries(stdc++exp TBB::tbb gmp)
 endif()
 link_libraries(primecount primesieve)
